# SimCLRaman

./: .gitignore  README.md  contrastive_trainer.py  datasets.py  loss_functions.py  pyproject.toml  requirements.txt  spectralnet.py  utils.py
saved_models/: finetuned_model_c50_s100.pt
