[project]
name = "cpsc552-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipywidgets>=8.1.6",
    "lazypredict>=0.2.16",
    "nbformat>=5.10.4",
    "ramanspy>=0.2.10",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "umap-learn>=0.5.7",
    "xgboost>=3.0.0",
]
